--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
   </div>
 
   <footer class="mt-10 text-sm text-gray-500">
-    Made for anime fans
+    Made for anime fans ❤️
   </footer>
 
 </body>
